--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^3.29.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.2.0",
     "next": "15.1.6",
