--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/ui/label.jsx", "tailwind.config.js", "src/lib/utils.js", "src/components/ui/input.jsx", "src/components/ui/hero-highlight.jsx", "src/app/login/page.jsx", "src/app/Tprofile/page.jsx", "src/app/page.jsx", "src/app/layout.jsx", "src/components/NavbarDemo.jsx", "src/components/HeroSection.jsx", "src/components/ui/navbar-menu.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/ui/label.jsx", "tailwind.config.js", "src/lib/utils.js", "src/components/ui/input.jsx", "src/components/ui/hero-highlight.jsx", "src/app/login/page.jsx", "src/app/Tprofile/page.jsx", "src/app/page.jsx", "src/app/layout.jsx", "src/components/NavbarDemo.jsx", "src/components/HeroSection.jsx", "src/components/ui/navbar-menu.jsx", "src/app/Oprofile/page.jsx"],
   "exclude": ["node_modules"]
 }
